iRedMail-0.8.0-beta2:
    * Fixed:
        + Dovecot cannot store realtime quota usage in PostgreSQL.

iRedMail-0.8.0-beta1:
    * It now supports PostgreSQL as backend.
    * Package update:
        + Roundcube webmail -> 0.7.1

iRedMail-0.7.4:
    * Enable two sample dovecot sieve filters in Roundcube webmail:
      Move spam to Junk, Vacation. Both are disabled by default.
    * Store realtime mailbox quota in separate SQL table in MySQL backend.
    * It now works on Ubuntu 11.10, openSUSE 12.1.
    * SPF verification is now enabled by default.
    * Add Policyd-2.0.x (code name "cluebringer") support on Ubuntu 11.10.
    * Fixed:
      + Apache daemon user doesn't have permission to read Apache log files in
        Awstats's cron job.
      + Incorrect per-user realtime mailbox quota if loggin in with shadowAddress.
        OpenLDAP backend only. Thanks tmihalicek <tomislav.mihalicek @gmail>.
      + Incorrect per-user sieve_dir setting in Dovecot.
        Thanks cetex <oskar @cetex.se>.
      + Add missing INDEXes for Amavisd database: msgs.mail_id, (msgs.content,
        msgs.time_num), quarantine.mail_id.
        Thanks rjnena <rjnena@gmail>, David <dcharbonnier@gmail>.
    * Package update:
        + phpLDAPadmin -> 1.2.2
        + Roundcube webmail -> 0.7.0
        + phpMyAdmin -> 3.4.8

iRedMail-0.7.3:
    * Add enabledService=lda for newly created LDAP mail user. Required by
      Dovecot 2.x.
    * Works on CentOS 6.0, RHEL 6.x, Scientific Linux 6.x.
    * Mbox format mailbox is not supported anymore.
    * Add smtp-amavis_destination_recipient_limit=1 in Postfix for concurrency
      per-recipient limit. Thanks beez <jason@indo.net.id>.
    * Package update:
        + Roundcube webmail -> 0.5.4
        + iRedAdmin -> 0.1.6
        + phpMyAdmin -> 3.4.3.2

iRedMail-0.7.2:
    * Works on Ubuntu 11.04.
    * Enable LDAPS on FreeBSD by default. Thanks Markus Wyrsch <W-Chi@>.
    * Improvements: