@@ -1,6 +1,7 @@
 iRedMail-0.8.0-beta2:
     * Fixed:
         + Dovecot cannot store realtime quota usage in PostgreSQL.
+        + User authentication in Roundcube is case sensitive (login_lc).
 
 iRedMail-0.8.0-beta1:
     * It now supports PostgreSQL as backend.
